Player Progres Update

--- a/projects/eyomgame2/index.html
+++ b/projects/eyomgame2/index.html
@@ -527,10 +527,10 @@
 </div>
 <div class="item">
   <div class="name">
-    <h2><span  data-point="26.902,34.412" class="grade2">Caves Full of Hydra Heads</span></h2>
+    <h2><span  data-point="26.902,34.412" class="grade2">False Hydra Den</span></h2>
   </div>
   <div class="content">
-    <p>Coverage ends if you walk in, idiot.</p>
+    <p>Do not enter the cave systems without first informing local Hexenguard. Coverage ends if you enter without a means of resisting memory consumption.</p>
      <p class="script">6</p>
   </div>
 </div>
@@ -734,7 +734,7 @@
 </div>
 <div class="item">
   <div class="name">
-    <h2><span class="grade3">Hexenguard Advised</span></h2>
+    <h2><span class="grade3">Hexenguard Advised — Solved</span></h2>
   </div>
   <div class="content">
     <p>Unguarded mortals beyond this zone risk immediate discontinuity. Undead fully covered.</p>
@@ -743,7 +743,7 @@
 </div>
 <div class="item">
   <div class="name">
-    <h2><span  data-point="26.698,33.772" class="grade2">Hot Target Sector</span></h2>
+    <h2><span  data-point="26.698,33.772" class="grade2">Hot Target Sector — Solved</span></h2>
   </div>
   <div class="content">
     <p>LITTERALY. Random effects from unknown entities targeting capabilities. Full coverage.</p>
@@ -815,7 +815,7 @@
 </div>
 <div class="item">
   <div class="name">
-    <h2><span  data-point="26.701,33.769" class="grade4">Mama Vio</span></h2>
+    <h2><span  data-point="26.701,33.769" class="grade4">Mama Vio — Solved</span></h2>
   </div>
   <div class="content">
     <p>First era Zoman containment of unknown combat entity. Coverage ends if you cross the yellow line.</p>
@@ -1121,7 +1121,7 @@
 </div>
 <div class="item">
   <div class="name">
-    <h2><span  data-point="26.695,33.773" class="grade1">Timespalling Damage</span></h2>
+    <h2><span  data-point="26.695,33.773" class="grade1">Timespalling Damage — Solved</span></h2>
   </div>
   <div class="content">
     <p>The glittering you see in the air is the decay of ribbons of our future being destroyed. It is not good for you. Coverage ends without sealed transit vessel.</p>
