--- a/projects/eyomgame2/index.html
+++ b/projects/eyomgame2/index.html
@@ -617,7 +617,7 @@
 </div>
 <div class="item">
   <div class="name">
-    <h2><span data-point="26.723,34.117"  class="grade4">Do Not Engage</span></h2>
+    <h2><span data-point="26.723,34.117"  class="grade4">Do Not Engage — Solved</span></h2>
   </div>
   <div class="content">
     <p>Enemy hostile detected. Withdraw withdraw withdraw. Do not engage.</p>
@@ -833,7 +833,7 @@
 </div>
 <div class="item">
   <div class="name">
-    <h2><span class="grade3">Middle Yews</span></h2>
+    <h2><span class="grade3">Middle Yews — Solved</span></h2>
   </div>
   <div class="content">
     <p>Unknown non-historical hostile presence detected, be advised capabilities and modes unknown. Report and reinforce on contact. You are only covered as civilians.</p>
